# PIPNet

./: .gitignore  README.md  install_env.sh  pyproject.toml  requirements.txt  setup.py  web_app.py
1D/scripts/: Check_data_generation.ipynb  Compare_models.ipynb  Compare_training.ipynb  Dummy_layers.ipynb  Dummy_plots.ipynb  Ensemble_PIPNet_2021_10_14_lin.py  Ensemble_PIPNet_2021_10_14_lin_noise.py  Ensemble_PIPNet_2021_10_14_lin_noise_multiscale.py  Ensemble_PIPNet_2021_10_14_sig.py  Ensemble_PIPNet_2021_10_25_sym.py  Ensemble_PIPNet_2021_10_25_sym_rand_mas.py  Ensemble_PIPNet_2021_10_26_sym.py  Ensemble_PIPNet_2021_10_27.py  Ensemble_PIPNet_2021_11_04.py  Ensemble_PIPNet_2021_11_05.py  Ensemble_PIPNet_2021_11_09.py  Ensemble_PIPNet_2021_11_15.py  Ensemble_PIPNet_2021_11_15_2.py  Ensemble_PIPNet_2021_11_18.py  Ensemble_PIPNet_2021_11_18_2.py  Ensemble_PIPNet_2021_11_22_w_1.py  Ensemble_PIPNet_2021_11_22_w_10.py  Ensemble_PIPNet_2021_11_22_w_100.py  Ensemble_PIPNet_2021_11_23_independent_w_1.py  Ensemble_PIPNet_2021_11_23_independent_w_10.py  Ensemble_PIPNet_2021_11_23_independent_w_100.py  Ensemble_PIPNet_2021_11_29_2k.py  Ensemble_PIPNet_2021_11_29_4k.py  Ensemble_PIPNet_2021_11_30.py  Ensemble_PIPNet_2021_11_30_larger.py  Ensemble_PIPNet_2021_11_30_more_mas.py  Ensemble_PIPNet_2021_12_01_dec.py  Ensemble_PIPNet_2021_12_01_inc.py  Ensemble_PIPNet_2021_12_07_w_1.py  Ensemble_PIPNet_2021_12_07_w_10.py  Ensemble_PIPNet_2021_12_07_w_100.py  Ensemble_PIPNet_2021_12_09_w_001.py  (+158 more)
1D/src/: data.py  (+2 more)
static/: main.css
templates/: about.html  contact.html  examples.html  home.html  layout.html  predict.html
(+252 files in other folders)
