[project]
name = "pipnet"
description = "Pure Isotropic NMR spectra using deep learning"
version = "0.0.1"
authors = [
    { name = "Manuel Cordova", email = "manuel.cordova@epfl.ch" }
]

dependencies = [
    "numpy",
    "scipy>=1.9",
    "setuptools",
    "torch",
    "torchvision",
    "torchaudio",
    "matplotlib",
    "pandas",
    "plotly",
    "flask"
]

[build-system]
requires = ["numpy", "scipy", "torch", "torchvision", "torchaudio", "matplotlib", "pandas", "plotly", "flask", "setuptools", "wheel"]